# py-ssg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyssg_build.example.py
.github/workflows/: ci.yml
pyssg/: main.py
pyssg/commands/: base_command.py  build.py  init.py  serve.py
pyssg/modules/: build_script.py  cache.py  config.py  html.py  markdown.py  rss.py  server.py  syntax.py  watcher.py
pyssg/modules/commands/: base_command.py  init.py
pyssg/templates/: py-ssg.toml
src/py_ssg/: builder.py  cli.py  init.py  server.py  template.py
tests/: test_builder.py  test_cli.py  test_init.py  test_template.py
tests/app/commands/: test_base_command.py  test_build.py  test_init.py  test_serve.py
tests/app/modules/: test_build_script.py  test_cache.py  test_config.py  test_html.py  test_html_components.py  test_markdown.py  test_rss.py  test_server.py  test_syntax.py  test_watcher.py
