[project]
name = "py-ssg"
version = "0.1.0"
description = "A Python static site generator with HTML component partials"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "watchdog>=4.0",
]

[project.scripts]
py-ssg = "py_ssg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_ssg"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]
